LayoutTests/js/script-tests/class-syntax-default-constructor.js
@@ -1,11 +1,14 @@
 
 description('Tests for ES6 class syntax default constructor');
 
-shouldBeTrue('class A { }; new A instanceof A');
+class A { };
+class B extends A { };
+
+shouldBeTrue('new A instanceof A');
 shouldThrow('A()', '"TypeError: Cannot call a class constructor"');
 shouldBeTrue('A.prototype.constructor instanceof Function');
 shouldBe('A.prototype.constructor.name', '"A"');
-shouldBeTrue('class B extends A { }; new B instanceof A; new B instanceof A');
+shouldBeTrue('new B instanceof A; new B instanceof A');
 shouldThrow('B()', '"TypeError: Cannot call a class constructor"');
 shouldBe('B.prototype.constructor.name', '"B"');
 shouldBeTrue('A !== B');
