LayoutTests/js/script-tests/class-syntax-name.js
@@ -1,0 +1,88 @@
+description('Tests for ES6 class name semantics in class statements and expressions');
+
+function runTestShouldBe(statement, result) {
+    shouldBe(statement, result);
+    shouldBe("'use strict'; " + statement, result);
+}
+
+function runTestShouldBeTrue(statement) {
+    shouldBeTrue(statement);
+    shouldBeTrue("'use strict'; " + statement);
+}
+
+function runTestShouldThrow(statement) {
+    shouldThrow(statement);
+    shouldThrow("'use strict'; " + statement);
+}
+
+function runTestShouldNotThrow(statement) {
+    shouldNotThrow(statement);
+    shouldNotThrow("'use strict'; " + statement);
+}
+
+// Class statement. Class name added to global scope. Class name is available inside class scope and in global scope.
+debug('Class statement');
+runTestShouldThrow("A");
+runTestShouldThrow("class {}");
+runTestShouldThrow("class { constructor() {} }");
+runTestShouldNotThrow("class A { constructor() {} }");
+runTestShouldBe("class A { constructor() {} }; A.toString()", "'function A() {}'");
+runTestShouldBeTrue("class A { constructor() {} }; (new A) instanceof A");
+runTestShouldBe("class A { constructor() { this.base = A; } }; (new A).base.toString()", "'function A() { this.base = A; }'");
+runTestShouldNotThrow("class A { constructor() {} }; class B extends A {};");
+runTestShouldBe("class A { constructor() {} }; class B extends A { constructor() {} }; B.toString()", "'function B() {}'");
+runTestShouldBeTrue("class A { constructor() {} }; class B extends A {}; (new B) instanceof A");
+runTestShouldBeTrue("class A { constructor() {} }; class B extends A {}; (new B) instanceof B");
+runTestShouldBe("class A { constructor() {} }; class B extends A { constructor() { super(); this.base = A; this.derived = B; } }; (new B).base.toString()", "'function A() {}'");
+runTestShouldBe("class A { constructor() {} }; class B extends A { constructor() { super(); this.base = A; this.derived = B; } }; (new B).derived.toString()", "'function B() { super(); this.base = A; this.derived = B; }'");
+
+// Class expression. Class name not added to scope. Class name is available inside class scope.
+debug(''); debug('Class expression');
+runTestShouldThrow("A");
+runTestShouldNotThrow("(class {})");
+runTestShouldNotThrow("(class { constructor(){} })");
+runTestShouldBe("typeof (class {})", '"function"');
+runTestShouldNotThrow("(class A {})");
+runTestShouldBe("typeof (class A {})", '"function"');
+runTestShouldThrow("(class A {}); A");
+runTestShouldNotThrow("new (class A {})");
+runTestShouldBe("typeof (new (class A {}))", '"object"');
+runTestShouldNotThrow("(new (class A { constructor() { this.base = A; } })).base");
+runTestShouldBe("(new (class A { constructor() { this.base = A; } })).base.toString()", '"function A() { this.base = A; }"');
+runTestShouldNotThrow("class A {}; (class B extends A {})");
+runTestShouldThrow("class A {}; (class B extends A {}); B");
+runTestShouldNotThrow("class A {}; new (class B extends A {})");
+runTestShouldNotThrow("class A {}; new (class B extends A { constructor() { super(); this.base = A; this.derived = B; } })");
+runTestShouldBeTrue("class A {}; (new (class B extends A { constructor() { super(); this.base = A; this.derived = B; } })) instanceof A");
+runTestShouldBe("class A { constructor() {} }; (new (class B extends A { constructor() { super(); this.base = A; this.derived = B; } })).base.toString()", "'function A() {}'");
+runTestShouldBe("class A { constructor() {} }; (new (class B extends A { constructor() { super(); this.base = A; this.derived = B; } })).derived.toString()", "'function B() { super(); this.base = A; this.derived = B; }'");
+
+// Assignment of a class expression to a variable. Variable name available in scope, class name is not. Class name is available inside class scope.
+debug(''); debug('Class expression assignment to variable');
+runTestShouldThrow("A");
+runTestShouldNotThrow("var VarA = class {}");
+runTestShouldBe("var VarA = class { constructor() {} }; VarA.toString()", "'function () {}'");
+runTestShouldThrow("VarA");
+runTestShouldNotThrow("var VarA = class A { constructor() {} }");
+runTestShouldBe("var VarA = class A { constructor() {} }; VarA.toString()", "'function A() {}'");
+runTestShouldThrow("var VarA = class A { constructor() {} }; A.toString()");
+runTestShouldBeTrue("var VarA = class A { constructor() {} }; (new VarA) instanceof VarA");
+runTestShouldBe("var VarA = class A { constructor() { this.base = A; } }; (new VarA).base.toString()", "'function A() { this.base = A; }'");
+runTestShouldNotThrow("var VarA = class A { constructor() {} }; var VarB = class B extends VarA { constructor() {} };");
+runTestShouldThrow("var VarA = class A { constructor() {} }; var VarB = class B extends VarA { constructor() {} }; B");
+runTestShouldBe("var VarA = class A { constructor() {} }; var VarB = class B extends VarA { constructor() {} }; VarB.toString()", "'function B() {}'");
+runTestShouldBeTrue("var VarA = class A { constructor() {} }; var VarB = class B extends VarA { }; (new VarB) instanceof VarA");
+runTestShouldBeTrue("var VarA = class A { constructor() {} }; var VarB = class B extends VarA { }; (new VarB) instanceof VarB");
+runTestShouldBeTrue("var VarA = class A { constructor() {} }; var VarB = class B extends VarA { constructor() { super(); this.base = VarA; this.derived = B; this.derivedVar = VarB; } }; (new VarB).base === VarA");
+runTestShouldBeTrue("var VarA = class A { constructor() {} }; var VarB = class B extends VarA { constructor() { super(); this.base = VarA; this.derived = B; this.derivedVar = VarB; } }; (new VarB).derived === VarB");
+runTestShouldBeTrue("var VarA = class A { constructor() {} }; var VarB = class B extends VarA { constructor() { super(); this.base = VarA; this.derived = B; this.derivedVar = VarB; } }; (new VarB).derivedVar === VarB");
+
+// FIXME: Class statement binding should be like `let`, not `var`.
+debug(''); debug('Class statement binding in other circumstances');
+runTestShouldThrow("var result = A; result");
+runTestShouldThrow("var result = A; class A {}; result");
+runTestShouldNotThrow("class A {}; var result = A; result");
+shouldBe("eval('var Foo = 10'); Foo", "10");
+shouldThrow("'use strict'; eval('var Foo = 10'); Foo");
+shouldBe("eval('class Bar { constructor() {} }'); Bar.toString()", "'function Bar() {}'");
+shouldThrow("'use strict'; eval('class Bar { constructor() {} }'); Bar.toString()");
